ボタンレイアウトの修正

--- a/practice1/grails-app/assets/stylesheets/main.css
+++ b/practice1/grails-app/assets/stylesheets/main.css
@@ -596,3 +596,8 @@ img.grails-logo {
 .center {
     text-align:center;
 }
+.side{
+    display: inline-block;      /* インラインブロック要素にする */
+
+    padding: 20px 10px 5px 10px;
+}
