AWS-SNSメール通知送信機能の追加

--- a/sns/grails-app/assets/stylesheets/main.css
+++ b/sns/grails-app/assets/stylesheets/main.css
@@ -592,3 +592,13 @@ img.grails-logo {
     height:340px;
     margin-top:-10px;
 }
+
+.center {
+    text-align:center;
+}
+.back-blue {
+    background-color:#eef;
+}
+.back-green {
+    background-color:#efe;
+}
